Fix task bleed

--- a/stroop_style.css
+++ b/stroop_style.css
@@ -87,9 +87,16 @@ button[disabled] {
 }
 
 .stim {
-  position: relative;
+  position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  width: 200px;
+	margin-top: -40;
+	margin-left: -100;
+}
+
+.stim-text {
+  text-align: center;
   font-weight: bold;
 }
 
